# Neznaju

./: .gitignore  CMakeLists.txt  DESCRIPTION.txt  README.md  TODO.txt  asdf.files  asdf.includes  desc.dia  diff_match_patch.h  ktexteditor_neznaju.desktop  ktexteditor_timedate.desktop  neznaju.cpp  neznaju.h  neznajuPlugin.cpp  neznajuPlugin.h  neznajuui.rc  timedate.cpp  timedate.h  timedateui.rc
